[fix] getEither liked 수정 : 조윤재
